--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -2,7 +2,7 @@
   "plugins": ["prettier-plugin-tailwindcss"],
   "semi": true,
   "trailingComma": "es5",
-  "singleQuote": true,
+  "singleQuote": false,
   "printWidth": 80,
   "tabWidth": 2,
   "useTabs": false,
