--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,7 +12,8 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": false,
+    "outDir": "dist"
   },
   "ts-node": {
     "esm": true,
